--- a/style.css
+++ b/style.css
@@ -65,3 +65,24 @@ h1 {
 #popup a:hover {
     text-decoration: underline;
 }
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #000;
+  text-align: center;
+}
+.footer p {
+text-decoration: none;
+color: #fff;
+}
+.footer a {
+  text-decoration: none;
+  color: #36c5f0;
+}
+.footer a:hover {
+  text-decoration: underline;
+  color: #ecb22e;
+}
